found issue with bg color for bottom needed to move section footer out of container parant lol

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -256,7 +256,7 @@ span.bg-color-6 {
 }
 .price-card .icon {
   float: right;
-  font-weight: 4oopx;
+  font-weight: 400px;
 }
 
 .plan-btn-wrapper {
